fix chats button alignment

--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -47,7 +47,6 @@
   }
 
   .chat-view-heading {
-    align-items: center;
     justify-content: space-between;
     display: flex;
     z-index: 2;
@@ -56,11 +55,11 @@
   }
 
   .go-back-button {
-    cursor: pointer;
-    width: 28px;
     text-align: center;
-    padding: 0.6em;
-    margin: -0.6em 0.6em -0.6em -0.6em;
+    padding: 0 0.7em;
+    line-height: 100%;
+    height: 100%;
+    align-self: stretch;
   }
 
   .jump-to-bottom-button {
